# gh-semantic-release

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: pipeline.yml
src/scottzach1/semantic_release/: __init__.py  cli.py  githelper.py  main.py
tests/: test_cli.py  test_git.py
