[project]
name = "gh-semantic-release"
version = "0.0.1"
description = "Trigger a semantic release with the click of a button"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Zac Scott", email = "zac.scott11@gmail.com" },
]
license = { text = "BSD-3" }
dependencies = [
    "gitpython>=3.1.44",
    "pydantic>=2.10.6",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]

[project.scripts]
gh-semantic-release = "scottzach1.semantic_release.main:app"
