[project]
name = "gh-semantic-release"
version = "0.0.1"
description = "Trigger a semantic release with the click of a button"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Zac Scott", email = "zac.scott11@gmail.com" },
]
license = { text = "BSD-3" }
dependencies = [
    "gitpython>=3.1.44",
    "pydantic>=2.10.6",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "anybadge>=1.16.0",
    "coverage>=7.6.12",
    "pip-audit>=2.8.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]

[project.scripts]
gh-semantic-release = "scottzach1.semantic_release.cli:app"

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = "src"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)4s] [%(name)9s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]
